added Empty action

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/Empty.srv"
   "srv/TargetId.srv"
   "action/CameraPkg.action"
+  "action/Empty.action"
   "action/SendCommand.action"
   "action/SpecialMove.action"
   DEPENDENCIES std_msgs geometry_msgs sensor_msgs
