added send message service so that rcs client can send a msg to server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/WaypointArray.msg"
   "msg/RcsTelemetry.msg"
   "srv/FulanghuaAction.srv"
+  "srv/SendMsg.srv"
   "srv/FulanghuaPose.srv"
   "srv/Empty.srv"
   "srv/TargetId.srv"
