added action position

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "action/SendCommand.action"
   "action/SpecialMove.action"
   "action/TriggerGoalSequence.action"
+  "action/AdjustPosition.action"
   DEPENDENCIES std_msgs geometry_msgs sensor_msgs
 )
 
