add PatrolTask Action for action_kit
汎用的なアクションaction_kitのためのアクションpkg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "action/CameraPkg.action"
   "action/Charge.action"
   "action/IntoDoghouse.action"
+  "action/PatrolTask.action"
   "action/SendCommand.action"
   "action/SpecialMove.action"
   "action/TriggerGoalSequence.action"
