added sendString service

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/FulanghuaAction.srv"
   "srv/GetPCD.srv"
   "srv/SendMsg.srv"
+  "srv/SendString.srv"
   "srv/ChangeDriveMode.srv"
   "srv/FulanghuaPose.srv"
   "srv/Empty.srv"
