--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/RcsTelemetry.msg"
   "msg/CostMap.msg"
   "msg/FloorInfo.msg"
+  "msg/HalnaError.msg"
   "srv/FulanghuaAction.srv"
   "srv/GetPCD.srv"
   "srv/SendMsg.srv"
