Add: msg for light control

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/CostMap.msg"
   "msg/FloorInfo.msg"
   "msg/HalnaError.msg"
+  "msg/FrontLightControl.msg"
   "srv/FulanghuaAction.srv"
   "srv/GetPCD.srv"
   "srv/SendMsg.srv"
