Add: service files for siyi PTZ camera

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,9 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/Params.srv"
   "srv/TargetId.srv"
   "srv/TextToSpeech.srv"
+  "srv/PanTilt.srv"
+  "srv/Zoom.srv"
+  "srv/DisplayMode.srv"
   "action/CameraPkg.action"
   "action/Charge.action"
   "action/IntoDoghouse.action"
