--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,9 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/Zoom.srv"
   "srv/DisplayMode.srv"
   "srv/SdkClient.srv"
+  "srv/TemperaturePoint.srv"
+  "srv/TemperatureBox.srv"
+  "srv/TemperatureFullImage.srv"
   "action/CameraPkg.action"
   "action/Charge.action"
   "action/IntoDoghouse.action"
