Add: service for msg_ros_bridge to change fakecam's image source

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/TemperaturePoint.srv"
   "srv/TemperatureBox.srv"
   "srv/TemperatureFullImage.srv"
+  "srv/ChangePicture.srv"
   "action/CameraPkg.action"
   "action/Charge.action"
   "action/IntoDoghouse.action"
