--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/CostMap.msg"
   "msg/FloorInfo.msg"
   "msg/HalnaError.msg"
+  "msg/LEDControl.msg"
+  "msg/EmergencyButton.msg"
   "srv/FrontLightControl.srv"
   "srv/FulanghuaAction.srv"
   "srv/GetPCD.srv"
